added lots of functionality to app.py

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,6 +8,6 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <h1> Welcome to ForkCast {{name}}! </h1>
+        <h1> Welcome to ForkCast {{data.username}}! </h1>
     </body>
 </html>
