--- a/templates/login.html
+++ b/templates/login.html
@@ -6,22 +6,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="templates/styles.css">
         <title>Login</title>
-    <body>
-        <div class="container">
-            <h2>Login</h2>
-            <form action="/login" method="POST">
-                <div class="input-group">
-                    <label for="username">Username</label>
-                    <input type="text" id="username" name="username" required>
-                </div>
-                <div class="input-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" name="password" required>
-                </div>
-                <button type="submit">Login</button>
+    </head>
+        <body>
+            <h1>Login Page</h1>
+        
+            <form method="POST" action="">
+                {{ login.hidden_tag() }}
+                {{ login.username }}
+                {{ login.password }}
+                {{ login.submit }}
             </form>
-        </div>
-        <p> Don't have an account? </p>
-        <a href="/register"><button type="">Register</button></a>
-    </body>
+            <p> Don't have an account? </p>
+            <a href="{{ url_for("register") }}"><button type="">Register</button></a>
+        </body>
 </html>
